<resources>
    <string name="app_name">Lactachain</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_in">Log In</string>
    <string name="qr_scan_trace">Qr Scan Trace</string>
    <string name="farm">Farm/Plant</string>
    <string name="townHall">Ciudad</string>
    <string name="transporter">Transportista</string>
    <string name="transport">Transporte</string>
    <string name="sample">Muestra</string>
    <string name="volume">Volumen</string>
    <string name="temperature">Temperatura</string>
    <string name="volume_loaded">Write volume loaded.</string>
    <string name="milk_temperature">Write milk temperature.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature_units">ºC</string>
    <string name="FarmIdSearch">FarmId</string>
    <string name="add_transport">Add transport</string>
    <string name="car_plate">Car Plate</string>
    <string name="tank_code">Tank Code</string>
    <string name="capacity">Capacity</string>
    <string name="collect_id"><![CDATA[<Collect id>]]></string>
    <string name="silo">Silo</string>
    <string name="silo_id">Silo Id</string>
    <string name="search_farm">Search farm</string>
    <string name="new_delivery">New delivery</string>
    <string name="receptionSilo">Recept</string>
    <string name="storage">Storage</string>
    <string name="final_silo">Final</string>
    <string name="select_silo">Select silo type</string>
    <string name="ok">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_re_silo">Add new reception silo</string>
    <string name="create_new_silo">"Create a new silo?"</string>
    <string name="added_silo_reception">Reception silo %1$s added successfully.</string>
    <string name="added_final_silo">Silo %1$s added successfully.</string>
    <string name="milk_del_succ">Milk deliveries added successfully</string>



</resources>