<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/FarmName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:text="TextView"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="@dimen/header_font_size"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="20dp"
        android:shrinkColumns="1"
        android:stretchColumns="*"
        app:layout_constraintBottom_toTopOf="@+id/addMilkCollection"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/FarmName">
        <TableRow
            android:layout_weight=".1666">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="@dimen/font_size_forms"
                android:text="@string/townHall" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_forms"
                android:gravity="center_horizontal"
                android:text="@string/townHall" />
        </TableRow>

        <TableRow
            android:layout_weight=".1666">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="@dimen/font_size_forms"
                android:text="@string/transporter" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/transporter"
                android:gravity="center_horizontal"
                android:minHeight="48dp"
                android:text="@string/townHall" />
        </TableRow>
        <TableRow
            android:layout_weight=".1666">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size_forms"
                android:gravity="end"
                android:text="@string/transport" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/transport"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/townHall" />
        </TableRow>

        <TableRow
            android:layout_weight=".1666">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="@dimen/font_size_forms"
                android:text="@string/sample" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/samplecheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>

        <TableRow
            android:layout_weight=".1666">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="@dimen/font_size_forms"
                android:text="@string/volume" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputVolume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/volume_loaded"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/font_size_forms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>
        <TableRow
            android:layout_weight=".1666">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="@dimen/font_size_forms"
                android:text="@string/temperature" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/milk_temperature"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/font_size_forms"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>


    </TableLayout>


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/addMilkCollection"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@color/purple_200"
        app:srcCompat="@drawable/ic_baseline_add_64"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</LinearLayout>