<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.AddSilo">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/FarmName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/collect_id"
            android:textAlignment="center"
            android:gravity="center"
            android:textSize="@dimen/header_font_size"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.77"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="50dp"
            android:paddingVertical="20dp"

            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingHorizontal="30dp"
                android:paddingVertical="15dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1"
                        android:src="@drawable/ic_baseline_battery_0_bar_24">
                    </ImageView>
                    <RadioGroup
                        android:id="@+id/siloType"
                        android:layout_width="0dp"
                        android:layout_weight="0.9"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radio_storage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:checked="true"
                            android:text="@string/storage" />

                        <RadioButton
                            android:id="@+id/radio_final"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="false"
                            android:text="@string/final_silo" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.08"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/addSiloButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/add_button"
            app:srcCompat="@drawable/ic_baseline_add_64"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</LinearLayout>